# TOX_Net2

./: .anjuta_sym_db.db  LICENSE
.anjuta/session/: anjuta.session  dock-layout.xml
libtox_net/: .anjuta_sym_db.db  configure.ac
libtox_net/src/: Makefile.am  lib.c  libtox_net-0.1.pc.in  libtox_net.h
